test_case/rust-lang_rust/28247_139562793.rs

(1, (2, 3)).1.1;  //~ ERROR unexpected token
                  //~^ HELP try parenthesizing the first index
